--- a/prueba/pubspec.yaml
+++ b/prueba/pubspec.yaml
@@ -70,3 +70,11 @@ flutter:
     - assets/images/4.png
     - assets/images/5.png
     - assets/images/QR.png
+    - assets/images/QRSelected.png
+    - assets/images/QRIcon.png
+    - assets/images/PreciosSelected.png
+    - assets/images/Precios.png
+    - assets/images/MapaSelected.png
+    - assets/images/Mapa.png
+    - assets/images/Inicio.png
+    - assets/images/InicioSelected.png
